# fast_gicp

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.html  README.md  package.xml  setup.py
.github/workflows/: build.yml  issue_response.yml
data/: 251370668.pcd  251371071.pcd  cloud_15.pcd  relative.txt  source.pcd  source_cloud.txt  target.pcd  target_cloud.txt
docker/focal/: Dockerfile
docker/focal_cuda/: Dockerfile
docker/jammy_cuda/: Dockerfile
docker/kinetic/: Dockerfile
docker/melodic/: Dockerfile
docker/melodic_llvm/: Dockerfile
docker/noetic/: Dockerfile
docker/noetic_llvm/: Dockerfile
include/fast_gicp/alg/: point_cloud_organizer.hpp  point_distribution_estimation.hpp  scan_line_interval_estimation.hpp
include/fast_gicp/cuda/: brute_force_knn.cuh  compute_derivatives.cuh  compute_mahalanobis.cuh  covariance_estimation.cuh  covariance_regularization.cuh  fast_vgicp_cuda.cuh  find_voxel_correspondences.cuh  gaussian_voxelmap.cuh  ndt_compute_derivatives.cuh  ndt_cuda.cuh  vector3_hash.cuh  voxelmap.cuh
include/fast_gicp/gicp/: fast_gicp.hpp  fast_gicp_.hpp  fast_gicp_impl.hpp  fast_gicp_st.hpp  fast_gicp_st_impl.hpp  fast_vgicp.hpp  fast_vgicp_cuda.hpp  fast_vgicp_impl.hpp  fast_vgicp_voxel.hpp  gicp_derivatives.hpp  gicp_derivatives_double.hpp  gicp_loss.hpp  gicp_loss_double.hpp  gicp_settings.hpp  lsq_registration.hpp
include/fast_gicp/gicp/experimental/: fast_gicp_mp.hpp  fast_gicp_mp_impl.hpp
include/fast_gicp/gicp/impl/: fast_gicp_impl.hpp  fast_gicp_st_impl.hpp  fast_vgicp_cuda_impl.hpp  fast_vgicp_impl.hpp  lsq_registration_impl.hpp
include/fast_gicp/ndt/: ndt_cuda.hpp
include/fast_gicp/ndt/impl/: ndt_cuda_impl.hpp
include/fast_gicp/opt/: gauss_newton.hpp
include/fast_gicp/so3/: so3.hpp  so3_derivatives.hpp  so3_derivatives_double.hpp
include/kkl/opt/: line_search.hpp  numerical.hpp  optimizer.hpp  termination_criteria.hpp  test_functions.hpp
include/kkl/opt/solvers/: backtracking_search.hpp  bfgs.hpp  broyden.hpp  dfp.hpp  golden_section_search.hpp  gradient_descent.hpp  nelder_mead.hpp  newton_method.hpp  quasi_newton_method.hpp
scripts/: runtest_cuda.sh
src/: align.cpp  cuda_joint_test.cpp  cuda_test.cu  expmap.cpp  fast_test.cpp  kitti.cpp  kitti.py  ndt_test.cpp
src/fast_gicp/cuda/: brute_force_knn.cu  compute_derivatives.cu  compute_mahalanobis.cu  covariance_estimation.cu  covariance_estimation_gaussian.cu  covariance_estimation_histogram.cu  covariance_estimation_laplacian.cu  covariance_estimation_polynomial.cu  covariance_regularization.cu  cuda_test.cu  fast_vgicp_cuda.cu  find_voxel_correspondences.cu  gaussian_voxelmap.cu  ndt_compute_derivatives.cu  ndt_cuda.cu
src/fast_gicp/gicp/: fast_gicp.cpp  fast_gicp_st.cpp  fast_vgicp.cpp  fast_vgicp_cuda.cpp  gicp_loss.cpp  gicp_loss_double.cpp  lsq_registration.cpp
src/fast_gicp/ndt/: ndt_cuda.cpp
src/python/: main.cpp
src/test/: gicp_test.cpp
