<?xml version="1.0"?>
<package format="2">
  <name>fast_gicp</name>
  <version>0.0.0</version>
  <description>A collection of fast point cloud registration implementations</description>

  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>iridescence</depend>
  <export>
  </export>
</package>
