<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fast_gicp</name>
  <version>0.0.0</version>
  <description>A collection of fast point cloud registration implementations</description>

  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/SMRT-AIST/fast_gicp</url>
  <url type="repository">https://github.com/SMRT-AIST/fast_gicp</url>
  <url type="bugtracker">https://github.com/SMRT-AIST/fast_gicp/issues</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <build_depend>ros_environment</build_depend>

  <depend>libpcl-all-dev</depend>
  <depend>eigen</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
